--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -148,12 +148,15 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="${denominazioneProvider != null} ? #{label.lista_eventi_provider(${denominazioneProvider})} : #{label.lista_eventi}">Lista degli eventi</h2>
+						<h2 th:if="${label == null}" th:text="${denominazioneProvider != null} ? #{label.lista_eventi_provider(${denominazioneProvider})} : #{label.lista_eventi}">Lista degli eventi</h2>
+						<h2 th:if="${label != null}" th:text="${label}">Lista degli eventi</h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
-								<a class="btn btn-primary pull-right" th:text="#{label.riedizione_evento}" data-toggle="modal" data-target=".modal-scelta-riedizione"></a>
-								<a class="btn btn-primary pull-right" th:text="#{label.nuovo_evento_da_pfa}" data-toggle="modal" data-target=".modal-scelta-attuazione"></a>
-								<a class="btn btn-primary pull-right" th:text="#{label.creazione_evento}" data-toggle="modal" data-target=".modal-scelta-tipologia"></a>
+								<th:block th:if="${canCreateEvento}">
+									<a class="btn btn-primary pull-right" th:text="#{label.riedizione_evento}" data-toggle="modal" data-target=".modal-scelta-riedizione"></a>
+									<a class="btn btn-primary pull-right" th:text="#{label.nuovo_evento_da_pfa}" data-toggle="modal" data-target=".modal-scelta-attuazione"></a>
+									<a class="btn btn-primary pull-right" th:text="#{label.creazione_evento}" data-toggle="modal" data-target=".modal-scelta-tipologia"></a>
+								</th:block>
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -190,7 +193,14 @@
 									<td th:text="${evento.edizione}"></td>
 									<td th:text="${evento.proceduraFormativa.name()}"></td>
 									<td th:text="${evento.titolo}"></td>
-									<td th:text="${evento.sedeEvento?.luogo}"></td>
+									
+									<td th:if="${evento.proceduraFormativa == T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD}">
+										<span></span>
+									</td>
+									<td th:unless="${evento.proceduraFormativa == T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD}">
+										<span th:text="${evento.sedeEvento?.luogo}"></span>
+									</td>
+									
 									<td th:text="${evento.dataInizio != null} ? ${#temporals.format(evento.dataInizio, 'dd/MM/yyyy')} : ''"></td>
 									<td th:text="${evento.dataFine != null} ? ${#temporals.format(evento.dataFine, 'dd/MM/yyyy')} : ''"></td>
 							<!-- 		<td>
