Gestione Province e Comuni

--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -358,12 +358,10 @@
 												data-width="100%" data-style="btn-primary"
 												data-actions-box="true" data-size="10"
 												data-hide-disabled="false"
-												onchange="sendAjaxRequestProvincia()"
 												title="Seleziona una provincia...">
 												<option
-													th:each="provincia : ${elencoProvince}"
-													th:value="${provincia}"
-													th:text="${provincia}">
+													th:value="${eventoWrapper.evento.sedeEvento.provincia}"
+													th:text="${eventoWrapper.evento.sedeEvento.provincia}">
 												</option>
 											</select>
 										</div>
@@ -1415,6 +1413,7 @@
 
 				</form>
 
+			<script src="../static/js/province.js" th:src="@{/js/province.js}"></script>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
 			    var days;
@@ -1490,6 +1489,9 @@
 					function openClock(caller){
 						$(caller).parent().click();
 					}
+					
+					//init per provincia e comune della sede
+					initProvinciaComune('provincia', 'comune');
 				}
 
 				//eventLister cambio tab
