--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -448,6 +448,7 @@
 				</div>
 			</div>
 		</div>
+		<script src="../static/js/province.js" th:src="@{/js/province.js}"></script>
 		<script th:inline="javascript">
 		/*<![CDATA[*/
 
@@ -467,24 +468,6 @@
 
 			  $('#counter').html(text_remaining + ' '+[[#{label.caratteri_rimanenti}]]);
 			});
-
-			//Funzione che popola la lista dei comuni
-			function sendAjaxRequestProvincia(){
-				var provincia = $('#provincia option:selected').val();
-				var start = [[@{/comuni?provincia=}]];
-				var end = provincia;
-				var url = start + end;
-				$.get(url, function(data){
-					$("#comune").empty();
-					for(var item = 0; item < data.length; item++){
-						var option = '<option value = "' + data[item] + '">' + data[item] + "</option>";
-						$("#comune").append(option);
-					}
-					$("#comune").prop("disabled", false);
-					$("#comune").selectpicker('refresh');
-
-				});
-			};
 
 			$(document).ready(function() {
 
@@ -565,7 +548,7 @@
 						"sClass": "center"
 					}]
 			    });
-
+			  	
 			    initAllCommon();
 			});
 
@@ -592,6 +575,17 @@
 			}
 
 			function initAllCommon(){
+			  	//devo recuperare tutte le coppie provincia comune del programma giornaliero
+			  	$('.provincia').each(function() {
+			  		if($(this).attr("data-programma-provincia") != undefined) {
+			  			//console.log($(this).attr("data-programma-provincia"));
+			  			//recupero il relativo campo comune
+			  			//console.log('nome prov: ' + $(this).attr('id'));
+			  			//console.log('nome com: ' + $('.comune  [data-programma-comune="' + $(this).attr("data-programma-provincia") + '"]').attr('id'));
+			  			initProvinciaComune($(this).attr('id'), $('.comune  [data-programma-comune="' + $(this).attr("data-programma-provincia") + '"]').attr('id'));
+			  		}
+			  	});
+
 				days = getDayNamesShort();
 				months = getMonthNames();
 
@@ -1463,7 +1457,16 @@
 							<span class="required">*</span>
 						</label>
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" >
-							<input type="text" th:attr="data-programma-provincia=__${data.key}__" class="form-control" th:field="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.provincia}" />
+							<select th:attr="data-programma-provincia=__${data.key}__, id=provprog__${data.key}__"
+								class="selectpicker required provincia"
+								th:field="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.provincia}"
+								data-width="100%" data-style="btn-primary"
+								data-actions-box="true" data-size="10"
+								data-hide-disabled="false"
+								title="Seleziona una provincia...">
+								<option th:value="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.provincia}"
+									th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.provincia}"/>
+							</select>
 						</div>
 						<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap['+__${data.key}__+'].programma.sede.provincia')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap['+data.key+'].programma.sede.provincia')}__}"></div>
 					</div>
@@ -1474,7 +1477,17 @@
 							<span class="required">*</span>
 						</label>
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" >
-							<input type="text" th:attr="data-programma-comune=__${data.key}__" class="form-control" th:field="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.comune}" />
+                        	<select th:attr="data-programma-comune=__${data.key}__, id=comprog__${data.key}__"
+								class="selectpicker required comune"
+								th:field="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.comune}"
+								data-width="100%" data-style="btn-primary"
+								data-actions-box="true" data-size="10"
+								data-hide-disabled="false"
+								onchange="sendAjaxRequestCAP()"
+								title="Seleziona un comune...">
+								<option th:value="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.comune}"
+									th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.sede.comune}"/>
+							</select>
 						</div>
 						<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap['+__${data.key}__+'].programma.sede.comune')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap['+data.key+'].programma.sede.comune')}__}"></div>
 					</div>
