--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -381,12 +381,10 @@
 											data-width="100%" data-style="btn-primary"
 											data-actions-box="true" data-size="10"
 											data-hide-disabled="false"
-											onchange="sendAjaxRequestProvincia()"
 											title="Seleziona una provincia...">
 											<option
-												th:each="provincia : ${elencoProvince}"
-												th:value="${provincia}"
-												th:text="${provincia}">
+												th:value="${eventoWrapper.evento.sedeEvento.provincia}"
+												th:text="${eventoWrapper.evento.sedeEvento.provincia}">
 											</option>
 										</select>
 									</div>
@@ -1256,6 +1254,7 @@
 				<input id="submitButton" type="submit" style="display: none;" />
 			</form>
 
+			<script src="../static/js/province.js" th:src="@{/js/province.js}"></script>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
 
@@ -1303,6 +1302,9 @@
 						reloadSection('tab2');
 					});
 					updateRuoliCoinvolti();
+					
+					//init per provincia e comune della sede
+					initProvinciaComune('provincia', 'comune');					
 				}
 
 
